--- a/app/package.json
+++ b/app/package.json
@@ -3,39 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@hookform/resolvers": "^2.8.4",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/lab": "^5.0.0-alpha.48",
-    "@mui/material": "^5.0.0-rc.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.1",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/lab": "^5.0.0-alpha.86",
+    "@mui/material": "^5.8.4",
     "@mui/styles": "^5.0.0",
     "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
     "ethers": "^5.5.2",
     "express": "^4.17.1",
-    "history": "^5.0.0",
-    "http-proxy-middleware": "^2.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "ipfs-http-client": "^55.0.0",
     "mui-rff": "^3.0.16",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-final-form": "^6.5.3",
-    "react-hook-form": "^7.20.5",
-    "react-redux": "^7.2.4",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.32.0",
+    "react-redux": "^8.0.2",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
     "react-slick": "^0.28.1",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.0.1",
+    "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
   "scripts": {
