--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
+    "axios": "^1.4.0",
     "hardhat": "^2.8.0",
     "hardhat-shorthand": "^1.0.0"
   },
