--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
-    "axios": "^1.4.0",
     "hardhat": "^2.8.0",
-    "hardhat-shorthand": "^1.0.0",
-    "react-query": "^3.39.3"
+    "hardhat-shorthand": "^1.0.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
