--- a/app/package.json
+++ b/app/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@hookform/resolvers": "^3.1.0",
     "axios": "^1.4.0",
+    "clsx": "^1.2.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.1.1",
