--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "zod": "^3.21.4"
   },
