--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
