--- a/app/package.json
+++ b/app/package.json
@@ -20,10 +20,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "vite-plugin-svgr": "^3.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
