--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.11.1",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "swiper": "^10.1.0",
     "vite-plugin-svgr": "^3.2.0",
     "zod": "^3.21.4"
   },
