--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -25,6 +25,6 @@
     },
     "types": ["vite-plugin-svgr/client"]
   },
-  "include": ["src"],
+  "include": ["src", "swiper.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
