--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -23,7 +23,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["vite-plugin-svgr/client"]
+    "types": ["node", "vite-plugin-svgr/client"]
   },
   "include": ["src", "swiper.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
