--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-spinners": "^0.13.8",
