--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,8 @@
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0",
     "vite-plugin-svgr": "^3.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.1.1",
