--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.0",
+    "@web3modal/wagmi": "^3.4.0",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "localforage": "^1.10.0",
@@ -27,7 +28,9 @@
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0",
+    "viem": "^1.19.9",
     "vite-plugin-svgr": "^3.2.0",
+    "wagmi": "^1.4.7",
     "zod": "^3.21.4",
     "zustand": "^4.4.1"
   },
